--- a/week06/css_quanzhong.html
+++ b/week06/css_quanzhong.html
@@ -1,5 +1,14 @@
+以前老版本的 IE 浏览器，255个 class 相当于 一个 id 选择器。
+后来就改成了 65536 。
+再后来，就改成了更大的数值。
 
-1、千位：
+
+简单选择器？
+复合选择器？
+
+
+
+1、千位
 如果是内联样式，记为 1 ，否则为 0 ；
 
 2、百位
@@ -9,5 +18,31 @@
 选择器中所有的类选择器，属性选择器，伪类选择器的数量
 
 4、个位
-选择器中所有的元素选择器
+选择器中所有的元素选择器，伪元素选择器
+
+通配符选择器不参与运算，为 0000
+
+#abc .abc div = 0111
+
+#abc .abc .ab div = 0121
+
+#abc .abc div p = 0112
+
+div#a.b .c[id=x] = 0131
+
+#a:not(#b) = 0210
+
+*.a = 0010
+
+div.a = 0011
+
+
+官方的例子：
+#s12:not(FOO)   /* a=1 b=0 c=1 */
+老师的例子：
+#a:not(#b) /* a=2 b=0 c=0 */
+我的例子：
+#a:not(#b) = /* a=2 b=1 c=0 */
+
+:not :where :is 这些伪类是怎样计算权重的？
 
