--- a/week07/font.html
+++ b/week07/font.html
@@ -4,6 +4,8 @@
         <title>字符实体</title>
     </head>
     <body>
-        <p id="">这是"字符"标签</p>
+        <!-- <p id="&quot;label&quot;">这是"字符"标签</p>
+        <p><span style="color: #ff0000;">内容</span></p> -->
+        <p label="这是引号&标签">这是&emsp;&emsp;&emsp;&emsp;引号标签&times;</p>
     </body>
 </html>
