--- a/week07/removeChild.html
+++ b/week07/removeChild.html
@@ -4,18 +4,18 @@
         <title></title>
     </head>
     <body>
-        <div id="main">内容</div>
+        <div id="main">main</div>
         <script>
             //已知父元素的情况下，删除子元素
-            let mainDiv = document.getElementById('main');
-            let mainDivContainer = document.getElementById('main-container');
-            mainDiv.removeChild(mainDivContainer);
+            // let mainDiv = document.getElementById('main');
+            // let mainDivContainer = document.getElementById('main-container');
+            // mainDiv.removeChild(mainDivContainer);
 
             //不知道其父元素的时候，想要删除元素，需要先获取它的父元素节点，然后才能删除
-            let mainDiv = document.getElementById('main');
-            if( mainDiv.parentNode ){
-                mainDiv.parentNode.removeChild(mainDiv);
-            }
+            // let mainDiv = document.getElementById('main');
+            // if( mainDiv.parentNode ){
+            //     mainDiv.parentNode.removeChild(mainDiv);
+            // }
         </script>
     </body>
 </html>
